--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "docs": "jsdoc -r ./src"
+    "docs": "jsdoc -r ./src -d out/nb/web"
   },
   "eslintConfig": {
     "extends": [
