--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "babel-plugin-macros": "^3.1.0",
+    "boxicons": "^2.1.4",
     "firebase": "^9.14.0",
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
