--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-ga4": "^2.1.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "reactstrap": "^9.1.4",
     "web-vitals": "^2.1.0"
   },
