--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "react-router-dom": "^6.4.1",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
+    "react-slick": "^0.30.2",
     "reactstrap": "^9.1.4",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
