--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "boxicons": "^2.1.4",
     "firebase": "^9.14.0",
     "gh-pages": "^4.0.0",
+    "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-ga4": "^2.1.0",
